# Spotuino

./: main.py  pyproject.toml  spotify.py
arduinostuff/: arduinostuff.ino
v2/: v2.ino
